@@ -35,31 +35,12 @@ Object flavors initialized...
 Couldn't send info to meta-server!
 Server is running version 3140
 Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-01 Aug 10:44:26: Welcome DarkGod=rich@theforest.demon.co.uk (0.0.0.0/0)
-Savefile does not exist for player DarkGod.
+04 Aug 00:11:36: Welcome Evileye=root@theforest.demon.co.uk (0.0.0.0/0)
 Couldn't send info to meta-server!
 Couldn't send info to meta-server!
-01 Aug 10:45:09: Goodbye DarkGod=rich@theforest.demon.co.uk ("client quit")
+04 Aug 00:12:02: Goodbye Evileye=root@theforest.demon.co.uk ("client quit")
 Couldn't send info to meta-server!
 Couldn't send info to meta-server!
 Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Couldn't send info to meta-server!
-Valid console command from 0.0.0.0.
-Shutting down.
+Warning: Next signal kills server!
 Couldn't send info to meta-server!
