@@ -702,8 +702,10 @@ void carry(int Ind, int pickup, int confirm)
 				msg_format(Ind, "You have %s (%c).", o_name, index_to_label(slot));
 
 
+#ifndef NEWHOUSES
 				/*  hack so it doesnt clear the house -APD- */
 				if (o_ptr->tval == TV_KEY) houses[o_ptr->pval].owned = 2;
+#endif
 
 				/* Delete original */
 				delete_object(Depth, p_ptr->py, p_ptr->px);
